fixed houseListing spacing

--- a/website/ui/map/src/components/houseListing/style.css
+++ b/website/ui/map/src/components/houseListing/style.css
@@ -71,7 +71,7 @@
     width:100px;
     height:20px;
     background:transparent;
-    
+    left:20px;
     font-family: "Century Gothic", CenturyGothic, Geneva, AppleGothic, sans-serif;
     font-weight:normal;
     letter-spacing:3px;
